--- a/README
+++ b/README
@@ -55,6 +55,34 @@ class:
 - Sem consitimento prévio de quem gerou
 
 ---
+# Hello World
+
+```sh
+> mkdir testPlaywrigth
+> cd testPlaywrigth
+> py -m venv venv
+> & .\venv\Scripts\Activate.ps1
+> pip install pytest-playwright
+> playwright install
+```
+
+---
+
+# Hello World
+
+```py
+from playwright.sync_api import sync_playwright
+
+with sync_playwright() as p:
+    for browser_type in [p.chromium, p.firefox, p.webkit]:
+        browser = browser_type.launch(headless=False)
+        page = browser.new_page()
+        page.goto('http://playwright.dev')
+        page.screenshot(path=f'example-{browser_type.name}.png')
+        browser.close()
+```
+
+---
 
 # Fontes e Sugestões
 
